--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,10 +1,16 @@
 .weatherInfo {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    color: green;
+    font-weight: bold;
 }
 
 .horizontalLine {
     color: blue;
     background-color: blue;
     height: 2px;
+}
+
+.format {
+    margin: 15px;
+    padding: 20px;
+    border: 15px solid black;
 }
